tests/ui/issues/issue-44078.rs
fn main() {
    "ğŸ˜Š""; //~ ERROR unterminated double quote
}
